--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -509,7 +509,7 @@ details[open] .accordionContent {
     height: 100%;
 }
 
-.clubCard h3 {
+.clubCard h2 {
     margin-bottom: 0;
     font-size: 24px;
     font-weight: 600;
@@ -914,7 +914,7 @@ h1 {
 
 }
 
-.jjhistorie h3 {
+.jjhistorie h2 {
     font-size: 22px;
     color: var(--redColor);
     margin-bottom: var(--smSpacer);
@@ -1310,6 +1310,7 @@ p {
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     border: none;
+    text-align: center;
 }
 
 .kontakt-boks-knap:hover {
